--- a/environments/includes/rabbitmq.base.yml
+++ b/environments/includes/rabbitmq.base.yml
@@ -9,6 +9,8 @@ services:
       - traefik.http.routers.${WARDEN_ENV_NAME}-rabbitmq.rule=Host(`rabbitmq.${TRAEFIK_DOMAIN}`)
       - traefik.http.services.${WARDEN_ENV_NAME}-rabbitmq.loadbalancer.server.port=15672
       - traefik.docker.network=${WARDEN_ENV_NAME}_default
+      - sablier.enable=true
+      - sablier.group=${WARDEN_ENV_NAME}
     volumes:
       - rabbitmq:/var/lib/rabbitmq
 
