feature: Default Sablier to the warden theme

--- a/config/sablier/sablier.yml
+++ b/config/sablier/sablier.yml
@@ -14,7 +14,7 @@ strategy:
   dynamic:
     custom-themes-path:
     show-details-by-default: true
-    default-theme: ghost
+    default-theme: warden
     default-refresh-frequency: 5s
   blocking:
     default-timeout: 1m
