--- a/environments/includes/php-fpm.base.yml
+++ b/environments/includes/php-fpm.base.yml
@@ -29,6 +29,9 @@ services:
       - CHOWN_DIR_LIST=${CHOWN_DIR_LIST:-}
     volumes: *volumes
     extra_hosts: *extra_hosts
+    labels:
+      - sablier.enable=true
+      - sablier.group=${WARDEN_ENV_NAME}
 
   php-debug:
     hostname: "${WARDEN_ENV_NAME}-php-debug"
@@ -47,6 +50,9 @@ services:
     extra_hosts: *extra_hosts
     depends_on:
       - php-fpm
+    labels:
+      - sablier.enable=true
+      - sablier.group=${WARDEN_ENV_NAME}
 volumes:
   bashhistory:
   sshdirectory:
